{
    "name": "NewControls",
    "maps": [
        {
            "name": "WeaponWheelMap",
            "id": "7aaf2217-1350-45a8-954f-4591024d0546",
            "actions": [
                {
                    "name": "OpenWeaponWheel",
                    "type": "Button",
                    "id": "b2ad8f6f-dd02-4df1-b05a-6a5a4c1d9d6e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Shoot",
                    "type": "Button",
                    "id": "7032e61e-dbcb-4f86-82ee-f92d2daaa14c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a41e78f5-3278-4ec6-a98d-16e99b923d21",
                    "path": "<Keyboard>/tab",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "OpenWeaponWheel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6e454eeb-7796-4d57-8986-da99220b4089",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}